// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ColorPicker should commit changes to all views on blur 1`] = `
.emotion-6 {
  font-family: -apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,Oxygen-Sans,Ubuntu,Cantarell,'Helvetica Neue',sans-serif;
  font-size: 13px;
}

.emotion-4 {
  margin-bottom: 8px;
}

.components-panel__row .emotion-4 {
  margin-bottom: inherit;
}

.emotion-0 {
  display: inline-block;
  margin-bottom: 8px;
}

.emotion-2 {
  width: 100%;
  font-family: -apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,Oxygen-Sans,Ubuntu,Cantarell,'Helvetica Neue',sans-serif;
  padding: 6px 8px;
  box-shadow: 0 0 0 transparent;
  -webkit-transition: box-shadow 0.1s linear;
  transition: box-shadow 0.1s linear;
  border-radius: 2px;
  border: 1px solid #757575;
  font-size: 16px;
  line-height: normal;
}

@media ( prefers-reduced-motion:reduce ) {
  .emotion-2 {
    -webkit-transition-duration: 0ms;
    transition-duration: 0ms;
  }
}

@media (min-width:600px) {
  .emotion-2 {
    font-size: 13px;
    line-height: normal;
  }
}

.emotion-2:focus {
  border-color: var( --wp-admin-theme-color );
  box-shadow: 0 0 0 calc( 1.5px - 1px ) var( --wp-admin-theme-color );
  outline: 2px solid transparent;
}

.emotion-2::-webkit-input-placeholder {
  color: rgba(30,30,30,0.62);
}

.emotion-2::-moz-placeholder {
  opacity: 1;
  color: rgba(30,30,30,0.62);
}

.emotion-2:-ms-input-placeholder {
  color: rgba(30,30,30,0.62);
}

.is-dark-theme .emotion-2::-webkit-input-placeholder {
  color: rgba(255,255,255,0.65);
}

.is-dark-theme .emotion-2::-moz-placeholder {
  opacity: 1;
  color: rgba(255,255,255,0.65);
}

.is-dark-theme .emotion-2:-ms-input-placeholder {
  color: rgba(255,255,255,0.65);
}

<div
  className="components-color-picker is-alpha-disabled"
>
  <div
    className="components-color-picker__saturation"
  >
    <div>
      <div
        className="components-color-picker__saturation-color"
        onMouseDown={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        role="application"
        style={
          Object {
            "background": "hsl(210,100%, 50%)",
          }
        }
      >
        <div
          className="components-color-picker__saturation-white"
        />
        <div
          className="components-color-picker__saturation-black"
        />
        <button
          aria-describedby="color-picker-saturation-2"
          aria-label="Choose a shade"
          className="components-button components-color-picker__saturation-pointer"
          onKeyDown={[Function]}
          style={
            Object {
              "left": "17%",
              "top": "20%",
            }
          }
          type="button"
        />
        <div
          className="components-visually-hidden"
          id="color-picker-saturation-2"
        >
          Use your arrow keys to change the base color. Move up to lighten the color, down to darken, left to decrease saturation, and right to increase saturation.
        </div>
      </div>
    </div>
  </div>
  <div
    className="components-color-picker__body"
  >
    <div
      className="components-color-picker__controls"
    >
      <div
        className="components-color-picker__swatch"
      >
        <div
          className="components-color-picker__active"
          style={
            Object {
              "backgroundColor": "rgb(170, 187, 204)",
            }
          }
        />
      </div>
      <div
        className="components-color-picker__toggles"
      >
        <div>
          <div
            className="components-color-picker__hue"
          >
            <div
              className="components-color-picker__hue-gradient"
            />
            <div
              className="components-color-picker__hue-bar"
              onMouseDown={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
            >
              <div
                aria-describedby="components-color-picker__hue-description-2"
                aria-label="Hue value in degrees, from 0 to 359."
                aria-orientation="horizontal"
                aria-valuemax="1"
                aria-valuemin="359"
                aria-valuenow={210}
                className="components-color-picker__hue-pointer"
                onKeyDown={[Function]}
                role="slider"
                style={
                  Object {
                    "left": "58.333333333333336%",
                  }
                }
                tabIndex="0"
              />
              <p
                className="components-visually-hidden"
                id="components-color-picker__hue-description-2"
              >
                Move the arrow left or right to change hue.
              </p>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      className="components-color-picker__inputs-wrapper"
    >
      <div
        className="components-color-picker__inputs-fields"
      >
        <div
          className="components-base-control components-color-picker__inputs-field emotion-6 emotion-7"
        >
          <div
            className="components-base-control__field emotion-4 emotion-5"
          >
            <label
              className="components-base-control__label emotion-0 emotion-1"
              htmlFor="inspector-text-control-2"
            >
              Color value in hexadecimal
            </label>
            <input
              className="components-text-control__input emotion-2 emotion-3"
              id="inspector-text-control-2"
              onBlur={[Function]}
              onChange={[Function]}
              onKeyDown={[Function]}
              type="text"
              value="#aabbcc"
            />
          </div>
        </div>
      </div>
      <div
        className="components-color-picker__inputs-toggle-wrapper"
      >
        <button
          aria-label="Change color format"
          className="components-button components-color-picker__inputs-toggle has-icon"
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onMouseDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          type="button"
        >
          <svg
            aria-hidden={true}
            focusable={false}
            height={24}
            role="img"
            viewBox="0 0 24 24"
            width={24}
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M17.5 11.6L12 16l-5.5-4.4.9-1.2L12 14l4.5-3.6 1 1.2z"
            />
          </svg>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`ColorPicker should commit changes to all views on keyDown = DOWN 1`] = `
.emotion-6 {
  font-family: -apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,Oxygen-Sans,Ubuntu,Cantarell,'Helvetica Neue',sans-serif;
  font-size: 13px;
}

.emotion-4 {
  margin-bottom: 8px;
}

.components-panel__row .emotion-4 {
  margin-bottom: inherit;
}

.emotion-0 {
  display: inline-block;
  margin-bottom: 8px;
}

.emotion-2 {
  width: 100%;
  font-family: -apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,Oxygen-Sans,Ubuntu,Cantarell,'Helvetica Neue',sans-serif;
  padding: 6px 8px;
  box-shadow: 0 0 0 transparent;
  -webkit-transition: box-shadow 0.1s linear;
  transition: box-shadow 0.1s linear;
  border-radius: 2px;
  border: 1px solid #757575;
  font-size: 16px;
  line-height: normal;
}

@media ( prefers-reduced-motion:reduce ) {
  .emotion-2 {
    -webkit-transition-duration: 0ms;
    transition-duration: 0ms;
  }
}

@media (min-width:600px) {
  .emotion-2 {
    font-size: 13px;
    line-height: normal;
  }
}

.emotion-2:focus {
  border-color: var( --wp-admin-theme-color );
  box-shadow: 0 0 0 calc( 1.5px - 1px ) var( --wp-admin-theme-color );
  outline: 2px solid transparent;
}

.emotion-2::-webkit-input-placeholder {
  color: rgba(30,30,30,0.62);
}

.emotion-2::-moz-placeholder {
  opacity: 1;
  color: rgba(30,30,30,0.62);
}

.emotion-2:-ms-input-placeholder {
  color: rgba(30,30,30,0.62);
}

.is-dark-theme .emotion-2::-webkit-input-placeholder {
  color: rgba(255,255,255,0.65);
}

.is-dark-theme .emotion-2::-moz-placeholder {
  opacity: 1;
  color: rgba(255,255,255,0.65);
}

.is-dark-theme .emotion-2:-ms-input-placeholder {
  color: rgba(255,255,255,0.65);
}

<div
  className="components-color-picker is-alpha-disabled"
>
  <div
    className="components-color-picker__saturation"
  >
    <div>
      <div
        className="components-color-picker__saturation-color"
        onMouseDown={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        role="application"
        style={
          Object {
            "background": "hsl(210,100%, 50%)",
          }
        }
      >
        <div
          className="components-color-picker__saturation-white"
        />
        <div
          className="components-color-picker__saturation-black"
        />
        <button
          aria-describedby="color-picker-saturation-4"
          aria-label="Choose a shade"
          className="components-button components-color-picker__saturation-pointer"
          onKeyDown={[Function]}
          style={
            Object {
              "left": "17%",
              "top": "20%",
            }
          }
          type="button"
        />
        <div
          className="components-visually-hidden"
          id="color-picker-saturation-4"
        >
          Use your arrow keys to change the base color. Move up to lighten the color, down to darken, left to decrease saturation, and right to increase saturation.
        </div>
      </div>
    </div>
  </div>
  <div
    className="components-color-picker__body"
  >
    <div
      className="components-color-picker__controls"
    >
      <div
        className="components-color-picker__swatch"
      >
        <div
          className="components-color-picker__active"
          style={
            Object {
              "backgroundColor": "rgb(170, 187, 204)",
            }
          }
        />
      </div>
      <div
        className="components-color-picker__toggles"
      >
        <div>
          <div
            className="components-color-picker__hue"
          >
            <div
              className="components-color-picker__hue-gradient"
            />
            <div
              className="components-color-picker__hue-bar"
              onMouseDown={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
            >
              <div
                aria-describedby="components-color-picker__hue-description-4"
                aria-label="Hue value in degrees, from 0 to 359."
                aria-orientation="horizontal"
                aria-valuemax="1"
                aria-valuemin="359"
                aria-valuenow={210}
                className="components-color-picker__hue-pointer"
                onKeyDown={[Function]}
                role="slider"
                style={
                  Object {
                    "left": "58.333333333333336%",
                  }
                }
                tabIndex="0"
              />
              <p
                className="components-visually-hidden"
                id="components-color-picker__hue-description-4"
              >
                Move the arrow left or right to change hue.
              </p>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      className="components-color-picker__inputs-wrapper"
    >
      <div
        className="components-color-picker__inputs-fields"
      >
        <div
          className="components-base-control components-color-picker__inputs-field emotion-6 emotion-7"
        >
          <div
            className="components-base-control__field emotion-4 emotion-5"
          >
            <label
              className="components-base-control__label emotion-0 emotion-1"
              htmlFor="inspector-text-control-4"
            >
              Color value in hexadecimal
            </label>
            <input
              className="components-text-control__input emotion-2 emotion-3"
              id="inspector-text-control-4"
              onBlur={[Function]}
              onChange={[Function]}
              onKeyDown={[Function]}
              type="text"
              value="#aabbcc"
            />
          </div>
        </div>
      </div>
      <div
        className="components-color-picker__inputs-toggle-wrapper"
      >
        <button
          aria-label="Change color format"
          className="components-button components-color-picker__inputs-toggle has-icon"
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onMouseDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          type="button"
        >
          <svg
            aria-hidden={true}
            focusable={false}
            height={24}
            role="img"
            viewBox="0 0 24 24"
            width={24}
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M17.5 11.6L12 16l-5.5-4.4.9-1.2L12 14l4.5-3.6 1 1.2z"
            />
          </svg>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`ColorPicker should commit changes to all views on keyDown = ENTER 1`] = `
.emotion-6 {
  font-family: -apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,Oxygen-Sans,Ubuntu,Cantarell,'Helvetica Neue',sans-serif;
  font-size: 13px;
}

.emotion-4 {
  margin-bottom: 8px;
}

.components-panel__row .emotion-4 {
  margin-bottom: inherit;
}

.emotion-0 {
  display: inline-block;
  margin-bottom: 8px;
}

.emotion-2 {
  width: 100%;
  font-family: -apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,Oxygen-Sans,Ubuntu,Cantarell,'Helvetica Neue',sans-serif;
  padding: 6px 8px;
  box-shadow: 0 0 0 transparent;
  -webkit-transition: box-shadow 0.1s linear;
  transition: box-shadow 0.1s linear;
  border-radius: 2px;
  border: 1px solid #757575;
  font-size: 16px;
  line-height: normal;
}

@media ( prefers-reduced-motion:reduce ) {
  .emotion-2 {
    -webkit-transition-duration: 0ms;
    transition-duration: 0ms;
  }
}

@media (min-width:600px) {
  .emotion-2 {
    font-size: 13px;
    line-height: normal;
  }
}

.emotion-2:focus {
  border-color: var( --wp-admin-theme-color );
  box-shadow: 0 0 0 calc( 1.5px - 1px ) var( --wp-admin-theme-color );
  outline: 2px solid transparent;
}

.emotion-2::-webkit-input-placeholder {
  color: rgba(30,30,30,0.62);
}

.emotion-2::-moz-placeholder {
  opacity: 1;
  color: rgba(30,30,30,0.62);
}

.emotion-2:-ms-input-placeholder {
  color: rgba(30,30,30,0.62);
}

.is-dark-theme .emotion-2::-webkit-input-placeholder {
  color: rgba(255,255,255,0.65);
}

.is-dark-theme .emotion-2::-moz-placeholder {
  opacity: 1;
  color: rgba(255,255,255,0.65);
}

.is-dark-theme .emotion-2:-ms-input-placeholder {
  color: rgba(255,255,255,0.65);
}

<div
  className="components-color-picker is-alpha-disabled"
>
  <div
    className="components-color-picker__saturation"
  >
    <div>
      <div
        className="components-color-picker__saturation-color"
        onMouseDown={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        role="application"
        style={
          Object {
            "background": "hsl(210,100%, 50%)",
          }
        }
      >
        <div
          className="components-color-picker__saturation-white"
        />
        <div
          className="components-color-picker__saturation-black"
        />
        <button
          aria-describedby="color-picker-saturation-5"
          aria-label="Choose a shade"
          className="components-button components-color-picker__saturation-pointer"
          onKeyDown={[Function]}
          style={
            Object {
              "left": "17%",
              "top": "20%",
            }
          }
          type="button"
        />
        <div
          className="components-visually-hidden"
          id="color-picker-saturation-5"
        >
          Use your arrow keys to change the base color. Move up to lighten the color, down to darken, left to decrease saturation, and right to increase saturation.
        </div>
      </div>
    </div>
  </div>
  <div
    className="components-color-picker__body"
  >
    <div
      className="components-color-picker__controls"
    >
      <div
        className="components-color-picker__swatch"
      >
        <div
          className="components-color-picker__active"
          style={
            Object {
              "backgroundColor": "rgb(170, 187, 204)",
            }
          }
        />
      </div>
      <div
        className="components-color-picker__toggles"
      >
        <div>
          <div
            className="components-color-picker__hue"
          >
            <div
              className="components-color-picker__hue-gradient"
            />
            <div
              className="components-color-picker__hue-bar"
              onMouseDown={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
            >
              <div
                aria-describedby="components-color-picker__hue-description-5"
                aria-label="Hue value in degrees, from 0 to 359."
                aria-orientation="horizontal"
                aria-valuemax="1"
                aria-valuemin="359"
                aria-valuenow={210}
                className="components-color-picker__hue-pointer"
                onKeyDown={[Function]}
                role="slider"
                style={
                  Object {
                    "left": "58.333333333333336%",
                  }
                }
                tabIndex="0"
              />
              <p
                className="components-visually-hidden"
                id="components-color-picker__hue-description-5"
              >
                Move the arrow left or right to change hue.
              </p>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      className="components-color-picker__inputs-wrapper"
    >
      <div
        className="components-color-picker__inputs-fields"
      >
        <div
          className="components-base-control components-color-picker__inputs-field emotion-6 emotion-7"
        >
          <div
            className="components-base-control__field emotion-4 emotion-5"
          >
            <label
              className="components-base-control__label emotion-0 emotion-1"
              htmlFor="inspector-text-control-5"
            >
              Color value in hexadecimal
            </label>
            <input
              className="components-text-control__input emotion-2 emotion-3"
              id="inspector-text-control-5"
              onBlur={[Function]}
              onChange={[Function]}
              onKeyDown={[Function]}
              type="text"
              value="#aabbcc"
            />
          </div>
        </div>
      </div>
      <div
        className="components-color-picker__inputs-toggle-wrapper"
      >
        <button
          aria-label="Change color format"
          className="components-button components-color-picker__inputs-toggle has-icon"
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onMouseDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          type="button"
        >
          <svg
            aria-hidden={true}
            focusable={false}
            height={24}
            role="img"
            viewBox="0 0 24 24"
            width={24}
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M17.5 11.6L12 16l-5.5-4.4.9-1.2L12 14l4.5-3.6 1 1.2z"
            />
          </svg>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`ColorPicker should commit changes to all views on keyDown = UP 1`] = `
.emotion-6 {
  font-family: -apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,Oxygen-Sans,Ubuntu,Cantarell,'Helvetica Neue',sans-serif;
  font-size: 13px;
}

.emotion-4 {
  margin-bottom: 8px;
}

.components-panel__row .emotion-4 {
  margin-bottom: inherit;
}

.emotion-0 {
  display: inline-block;
  margin-bottom: 8px;
}

.emotion-2 {
  width: 100%;
  font-family: -apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,Oxygen-Sans,Ubuntu,Cantarell,'Helvetica Neue',sans-serif;
  padding: 6px 8px;
  box-shadow: 0 0 0 transparent;
  -webkit-transition: box-shadow 0.1s linear;
  transition: box-shadow 0.1s linear;
  border-radius: 2px;
  border: 1px solid #757575;
  font-size: 16px;
  line-height: normal;
}

@media ( prefers-reduced-motion:reduce ) {
  .emotion-2 {
    -webkit-transition-duration: 0ms;
    transition-duration: 0ms;
  }
}

@media (min-width:600px) {
  .emotion-2 {
    font-size: 13px;
    line-height: normal;
  }
}

.emotion-2:focus {
  border-color: var( --wp-admin-theme-color );
  box-shadow: 0 0 0 calc( 1.5px - 1px ) var( --wp-admin-theme-color );
  outline: 2px solid transparent;
}

.emotion-2::-webkit-input-placeholder {
  color: rgba(30,30,30,0.62);
}

.emotion-2::-moz-placeholder {
  opacity: 1;
  color: rgba(30,30,30,0.62);
}

.emotion-2:-ms-input-placeholder {
  color: rgba(30,30,30,0.62);
}

.is-dark-theme .emotion-2::-webkit-input-placeholder {
  color: rgba(255,255,255,0.65);
}

.is-dark-theme .emotion-2::-moz-placeholder {
  opacity: 1;
  color: rgba(255,255,255,0.65);
}

.is-dark-theme .emotion-2:-ms-input-placeholder {
  color: rgba(255,255,255,0.65);
}

<div
  className="components-color-picker is-alpha-disabled"
>
  <div
    className="components-color-picker__saturation"
  >
    <div>
      <div
        className="components-color-picker__saturation-color"
        onMouseDown={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        role="application"
        style={
          Object {
            "background": "hsl(210,100%, 50%)",
          }
        }
      >
        <div
          className="components-color-picker__saturation-white"
        />
        <div
          className="components-color-picker__saturation-black"
        />
        <button
          aria-describedby="color-picker-saturation-3"
          aria-label="Choose a shade"
          className="components-button components-color-picker__saturation-pointer"
          onKeyDown={[Function]}
          style={
            Object {
              "left": "17%",
              "top": "20%",
            }
          }
          type="button"
        />
        <div
          className="components-visually-hidden"
          id="color-picker-saturation-3"
        >
          Use your arrow keys to change the base color. Move up to lighten the color, down to darken, left to decrease saturation, and right to increase saturation.
        </div>
      </div>
    </div>
  </div>
  <div
    className="components-color-picker__body"
  >
    <div
      className="components-color-picker__controls"
    >
      <div
        className="components-color-picker__swatch"
      >
        <div
          className="components-color-picker__active"
          style={
            Object {
              "backgroundColor": "rgb(170, 187, 204)",
            }
          }
        />
      </div>
      <div
        className="components-color-picker__toggles"
      >
        <div>
          <div
            className="components-color-picker__hue"
          >
            <div
              className="components-color-picker__hue-gradient"
            />
            <div
              className="components-color-picker__hue-bar"
              onMouseDown={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
            >
              <div
                aria-describedby="components-color-picker__hue-description-3"
                aria-label="Hue value in degrees, from 0 to 359."
                aria-orientation="horizontal"
                aria-valuemax="1"
                aria-valuemin="359"
                aria-valuenow={210}
                className="components-color-picker__hue-pointer"
                onKeyDown={[Function]}
                role="slider"
                style={
                  Object {
                    "left": "58.333333333333336%",
                  }
                }
                tabIndex="0"
              />
              <p
                className="components-visually-hidden"
                id="components-color-picker__hue-description-3"
              >
                Move the arrow left or right to change hue.
              </p>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      className="components-color-picker__inputs-wrapper"
    >
      <div
        className="components-color-picker__inputs-fields"
      >
        <div
          className="components-base-control components-color-picker__inputs-field emotion-6 emotion-7"
        >
          <div
            className="components-base-control__field emotion-4 emotion-5"
          >
            <label
              className="components-base-control__label emotion-0 emotion-1"
              htmlFor="inspector-text-control-3"
            >
              Color value in hexadecimal
            </label>
            <input
              className="components-text-control__input emotion-2 emotion-3"
              id="inspector-text-control-3"
              onBlur={[Function]}
              onChange={[Function]}
              onKeyDown={[Function]}
              type="text"
              value="#aabbcc"
            />
          </div>
        </div>
      </div>
      <div
        className="components-color-picker__inputs-toggle-wrapper"
      >
        <button
          aria-label="Change color format"
          className="components-button components-color-picker__inputs-toggle has-icon"
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onMouseDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          type="button"
        >
          <svg
            aria-hidden={true}
            focusable={false}
            height={24}
            role="img"
            viewBox="0 0 24 24"
            width={24}
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M17.5 11.6L12 16l-5.5-4.4.9-1.2L12 14l4.5-3.6 1 1.2z"
            />
          </svg>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`ColorPicker should only update input view for draft changes 1`] = `
.emotion-6 {
  font-family: -apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,Oxygen-Sans,Ubuntu,Cantarell,'Helvetica Neue',sans-serif;
  font-size: 13px;
}

.emotion-4 {
  margin-bottom: 8px;
}

.components-panel__row .emotion-4 {
  margin-bottom: inherit;
}

.emotion-0 {
  display: inline-block;
  margin-bottom: 8px;
}

.emotion-2 {
  width: 100%;
  font-family: -apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,Oxygen-Sans,Ubuntu,Cantarell,'Helvetica Neue',sans-serif;
  padding: 6px 8px;
  box-shadow: 0 0 0 transparent;
  -webkit-transition: box-shadow 0.1s linear;
  transition: box-shadow 0.1s linear;
  border-radius: 2px;
  border: 1px solid #757575;
  font-size: 16px;
  line-height: normal;
}

@media ( prefers-reduced-motion:reduce ) {
  .emotion-2 {
    -webkit-transition-duration: 0ms;
    transition-duration: 0ms;
  }
}

@media (min-width:600px) {
  .emotion-2 {
    font-size: 13px;
    line-height: normal;
  }
}

.emotion-2:focus {
  border-color: var( --wp-admin-theme-color );
  box-shadow: 0 0 0 calc( 1.5px - 1px ) var( --wp-admin-theme-color );
  outline: 2px solid transparent;
}

.emotion-2::-webkit-input-placeholder {
  color: rgba(30,30,30,0.62);
}

.emotion-2::-moz-placeholder {
  opacity: 1;
  color: rgba(30,30,30,0.62);
}

.emotion-2:-ms-input-placeholder {
  color: rgba(30,30,30,0.62);
}

.is-dark-theme .emotion-2::-webkit-input-placeholder {
  color: rgba(255,255,255,0.65);
}

.is-dark-theme .emotion-2::-moz-placeholder {
  opacity: 1;
  color: rgba(255,255,255,0.65);
}

.is-dark-theme .emotion-2:-ms-input-placeholder {
  color: rgba(255,255,255,0.65);
}

<div
  className="components-color-picker is-alpha-disabled"
>
  <div
    className="components-color-picker__saturation"
  >
    <div>
      <div
        className="components-color-picker__saturation-color"
        onMouseDown={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        role="application"
        style={
          Object {
            "background": "hsl(0,100%, 50%)",
          }
        }
      >
        <div
          className="components-color-picker__saturation-white"
        />
        <div
          className="components-color-picker__saturation-black"
        />
        <button
          aria-describedby="color-picker-saturation-1"
          aria-label="Choose a shade"
          className="components-button components-color-picker__saturation-pointer"
          onKeyDown={[Function]}
          style={
            Object {
              "left": "0%",
              "top": "0%",
            }
          }
          type="button"
        />
        <div
          className="components-visually-hidden"
          id="color-picker-saturation-1"
        >
          Use your arrow keys to change the base color. Move up to lighten the color, down to darken, left to decrease saturation, and right to increase saturation.
        </div>
      </div>
    </div>
  </div>
  <div
    className="components-color-picker__body"
  >
    <div
      className="components-color-picker__controls"
    >
      <div
        className="components-color-picker__swatch"
      >
        <div
          className="components-color-picker__active"
          style={
            Object {
              "backgroundColor": "rgb(255, 255, 255)",
            }
          }
        />
      </div>
      <div
        className="components-color-picker__toggles"
      >
        <div>
          <div
            className="components-color-picker__hue"
          >
            <div
              className="components-color-picker__hue-gradient"
            />
            <div
              className="components-color-picker__hue-bar"
              onMouseDown={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
            >
              <div
                aria-describedby="components-color-picker__hue-description-1"
                aria-label="Hue value in degrees, from 0 to 359."
                aria-orientation="horizontal"
                aria-valuemax="1"
                aria-valuemin="359"
                aria-valuenow={0}
                className="components-color-picker__hue-pointer"
                onKeyDown={[Function]}
                role="slider"
                style={
                  Object {
                    "left": "0%",
                  }
                }
                tabIndex="0"
              />
              <p
                className="components-visually-hidden"
                id="components-color-picker__hue-description-1"
              >
                Move the arrow left or right to change hue.
              </p>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      className="components-color-picker__inputs-wrapper"
    >
      <div
        className="components-color-picker__inputs-fields"
      >
        <div
          className="components-base-control components-color-picker__inputs-field emotion-6 emotion-7"
        >
          <div
            className="components-base-control__field emotion-4 emotion-5"
          >
            <label
              className="components-base-control__label emotion-0 emotion-1"
              htmlFor="inspector-text-control-1"
            >
              Color value in hexadecimal
            </label>
            <input
              className="components-text-control__input emotion-2 emotion-3"
              id="inspector-text-control-1"
              onBlur={[Function]}
              onChange={[Function]}
              onKeyDown={[Function]}
              type="text"
              value="#abc"
            />
          </div>
        </div>
      </div>
      <div
        className="components-color-picker__inputs-toggle-wrapper"
      >
        <button
          aria-label="Change color format"
          className="components-button components-color-picker__inputs-toggle has-icon"
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onMouseDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          type="button"
        >
          <svg
            aria-hidden={true}
            focusable={false}
            height={24}
            role="img"
            viewBox="0 0 24 24"
            width={24}
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M17.5 11.6L12 16l-5.5-4.4.9-1.2L12 14l4.5-3.6 1 1.2z"
            />
          </svg>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`ColorPicker should render color picker 1`] = `
.emotion-6 {
  font-family: -apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,Oxygen-Sans,Ubuntu,Cantarell,'Helvetica Neue',sans-serif;
  font-size: 13px;
}

.emotion-4 {
  margin-bottom: 8px;
}

.components-panel__row .emotion-4 {
  margin-bottom: inherit;
}

.emotion-0 {
  display: inline-block;
  margin-bottom: 8px;
}

.emotion-2 {
  width: 100%;
  font-family: -apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,Oxygen-Sans,Ubuntu,Cantarell,'Helvetica Neue',sans-serif;
  padding: 6px 8px;
  box-shadow: 0 0 0 transparent;
  -webkit-transition: box-shadow 0.1s linear;
  transition: box-shadow 0.1s linear;
  border-radius: 2px;
  border: 1px solid #757575;
  font-size: 16px;
  line-height: normal;
}

@media ( prefers-reduced-motion:reduce ) {
  .emotion-2 {
    -webkit-transition-duration: 0ms;
    transition-duration: 0ms;
  }
}

@media (min-width:600px) {
  .emotion-2 {
    font-size: 13px;
    line-height: normal;
  }
}

.emotion-2:focus {
  border-color: var( --wp-admin-theme-color );
  box-shadow: 0 0 0 calc( 1.5px - 1px ) var( --wp-admin-theme-color );
  outline: 2px solid transparent;
}

.emotion-2::-webkit-input-placeholder {
  color: rgba(30,30,30,0.62);
}

.emotion-2::-moz-placeholder {
  opacity: 1;
  color: rgba(30,30,30,0.62);
}

.emotion-2:-ms-input-placeholder {
  color: rgba(30,30,30,0.62);
}

.is-dark-theme .emotion-2::-webkit-input-placeholder {
  color: rgba(255,255,255,0.65);
}

.is-dark-theme .emotion-2::-moz-placeholder {
  opacity: 1;
  color: rgba(255,255,255,0.65);
}

.is-dark-theme .emotion-2:-ms-input-placeholder {
  color: rgba(255,255,255,0.65);
}

<div
  className="components-color-picker is-alpha-disabled"
>
  <div
    className="components-color-picker__saturation"
  >
    <div>
      <div
        className="components-color-picker__saturation-color"
        onMouseDown={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        role="application"
        style={
          Object {
            "background": "hsl(0,100%, 50%)",
          }
        }
      >
        <div
          className="components-color-picker__saturation-white"
        />
        <div
          className="components-color-picker__saturation-black"
        />
        <button
          aria-describedby="color-picker-saturation-0"
          aria-label="Choose a shade"
          className="components-button components-color-picker__saturation-pointer"
          onKeyDown={[Function]}
          style={
            Object {
              "left": "0%",
              "top": "0%",
            }
          }
          type="button"
        />
        <div
          className="components-visually-hidden"
          id="color-picker-saturation-0"
        >
          Use your arrow keys to change the base color. Move up to lighten the color, down to darken, left to decrease saturation, and right to increase saturation.
        </div>
      </div>
    </div>
  </div>
  <div
    className="components-color-picker__body"
  >
    <div
      className="components-color-picker__controls"
    >
      <div
        className="components-color-picker__swatch"
      >
        <div
          className="components-color-picker__active"
          style={
            Object {
              "backgroundColor": "rgb(255, 255, 255)",
            }
          }
        />
      </div>
      <div
        className="components-color-picker__toggles"
      >
        <div>
          <div
            className="components-color-picker__hue"
          >
            <div
              className="components-color-picker__hue-gradient"
            />
            <div
              className="components-color-picker__hue-bar"
              onMouseDown={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
            >
              <div
                aria-describedby="components-color-picker__hue-description-0"
                aria-label="Hue value in degrees, from 0 to 359."
                aria-orientation="horizontal"
                aria-valuemax="1"
                aria-valuemin="359"
                aria-valuenow={0}
                className="components-color-picker__hue-pointer"
                onKeyDown={[Function]}
                role="slider"
                style={
                  Object {
                    "left": "0%",
                  }
                }
                tabIndex="0"
              />
              <p
                className="components-visually-hidden"
                id="components-color-picker__hue-description-0"
              >
                Move the arrow left or right to change hue.
              </p>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      className="components-color-picker__inputs-wrapper"
    >
      <div
        className="components-color-picker__inputs-fields"
      >
        <div
          className="components-base-control components-color-picker__inputs-field emotion-6 emotion-7"
        >
          <div
            className="components-base-control__field emotion-4 emotion-5"
          >
            <label
              className="components-base-control__label emotion-0 emotion-1"
              htmlFor="inspector-text-control-0"
            >
              Color value in hexadecimal
            </label>
            <input
              className="components-text-control__input emotion-2 emotion-3"
              id="inspector-text-control-0"
              onBlur={[Function]}
              onChange={[Function]}
              onKeyDown={[Function]}
              type="text"
              value="#ffffff"
            />
          </div>
        </div>
      </div>
      <div
        className="components-color-picker__inputs-toggle-wrapper"
      >
        <button
          aria-label="Change color format"
          className="components-button components-color-picker__inputs-toggle has-icon"
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onMouseDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          type="button"
        >
          <svg
            aria-hidden={true}
            focusable={false}
            height={24}
            role="img"
            viewBox="0 0 24 24"
            width={24}
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M17.5 11.6L12 16l-5.5-4.4.9-1.2L12 14l4.5-3.6 1 1.2z"
            />
          </svg>
        </button>
      </div>
    </div>
  </div>
</div>
`;
